# media-measurement-tools

./: .gitattributes  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
configs/: README.md  experiment.detected.json  experiment.json
configs/backups/: experiment.bak.20260428T221928
docs/: local_mp4_decode_test.md  metrics.md  plan.md
receiver/: gstreamer_env.sh  receiver_stats.py  receiver_stats.sh  receiver_stats_preview.sh
scripts/: activate_with_vendor.sh  bootstrap_ubuntu_uv.sh  deactivate_vendor.sh  detect_and_configure_hw.py
sender/: prepare_mp4.sh  sender.sh  sender_stats.py
vulkan_mem_press/: CMakeLists.txt  Makefile  README.md  memstress.comp  memstress.spv  memstress_bw.comp  memstress_bw.spv  pressure_tuning.md  vk_compute_min.comp  vk_compute_min.cpp  vk_compute_min.spv  vk_memstress.cpp
