[project]
name = "media-measurement-tools"
version = "0.1.1"
description = "Minimal RTP/GStreamer sender-receiver experiment harness for ARM receiver measurements"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "PyGObject>=3.50,<3.51; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "PyGObject-stubs>=2.13.0",
]

[tool.uv]
default-groups = ["dev"]
